--- a/netflix/style.css
+++ b/netflix/style.css
@@ -94,3 +94,94 @@ body
     font-weight: 400;
     font-size: 1.3rem;
 }
+.email__input
+{
+    border:none;
+    background:transparent;
+    width: 100%;
+    height: 100%;
+    padding-left: 13px;
+}
+.email__label
+{   
+    position: absolute;
+   color: rgb(153, 149, 149);
+   top: 25%;
+   left:2%;
+   transition:0.5s;
+}
+.email__form__container
+{   
+    position: relative;
+    display: flex;
+    flex-direction:row;
+    justify-content: center;
+    align-items: center;
+    top: 115%;
+}
+.form__container
+{
+    height: 50px;
+    width: 500px;
+    background-color: white;
+}
+.email__input:focus + .email__label
+{
+    top:0;
+    font-size: 13px;
+}
+.email__input:not(:placeholder-shown).email__input:not(:focus) +.email__label
+{
+    top:0;
+    font-size: 13px;
+}
+.email__input:focus-visible
+{
+    outline: none;
+}
+.email__button
+{
+    height: 52px;
+    width: 250px;
+    color: white;
+    font-size: 25px;
+    background-color: red;
+    border: 1px solid transparent;
+}
+.feature__title
+{
+    font-weight: 600;
+    font-size: 40px;
+    padding-left: 120px;
+}
+.feature__subtitle
+{
+    padding-left: 120px;
+    font-size: 25px;
+    width: 45%;
+}
+.feature__image__container
+{
+    position:relative;
+}
+.feature__image
+{
+    width: 50%;
+}
+.feature__background__video__content
+{
+    position: absolute;
+    width: 50%;
+    top: 20.9%;
+    left:6.8%;
+    z-index: -10;
+}
+.feature__background__video
+{
+    background-color: black;
+}
+.feature
+{
+    border-top: 13px solid #222;
+    border-bottom: 8px solid #222;
+}
