--- a/netflix/style.css
+++ b/netflix/style.css
@@ -148,8 +148,10 @@ body
     background-color: red;
     border: 1px solid transparent;
 }
+/*
 .feature__title
 {
+    padding-top: 100px;
     font-weight: 600;
     font-size: 40px;
     padding-left: 120px;
@@ -158,7 +160,7 @@ body
 {
     padding-left: 120px;
     font-size: 25px;
-    width: 45%;
+    width: 35%;
 }
 .feature__image__container
 {
@@ -166,22 +168,284 @@ body
 }
 .feature__image
 {
-    width: 50%;
+    width: 100%;
 }
 .feature__background__video__content
 {
     position: absolute;
     width: 50%;
     top: 20.9%;
-    left:6.8%;
+    left:11.8%;
     z-index: -10;
 }
 .feature__background__video
 {
     background-color: black;
+    width: 150%;
 }
 .feature
 {
+    padding-bottom: 300px;
     border-top: 13px solid #222;
     border-bottom: 8px solid #222;
 }
+.feature__image__card
+{
+    position: absolute;
+    top: 110%;
+    left: 50%;
+}
+.feature__card
+{
+    position: relative;
+}
+.feature:nth-child(even)
+{
+    flex-direction: row-reverse;
+}*/
+.feature {
+    border-top: 8px solid #222;
+    padding: 2rem 1rem;
+  }
+  
+  .feature__details {
+    text-align: center;
+  }
+  
+  .feature__title {
+    font-size: 25px;
+    font-weight: 600;
+    margin: 10px 0;
+  }
+  
+  .feature__sub__title {
+    font-size: 15px;
+    font-weight: 400;
+  }
+  
+  .feature__image__container {
+    width: 100%;
+    position: relative;
+  }
+  .feature__image {
+    width: 100%;
+  }
+  
+  .feature__backgroud__video__container {
+    position: absolute;
+    width: 100%;
+    top: 20%;
+    left: 13%;
+    height: 100%;
+    max-width: 73%;
+    max-height: 54%;
+    z-index: -2;
+  }
+  
+  .feature__backgroud__video {
+    width: 100%;
+  }
+  
+  .feature__2__poster__container {
+    position: absolute;
+    bottom: 8%;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 100%;
+    max-width: 16em;
+    display: flex;
+    align-items: center;
+    background-color: black;
+    border: 2px solid rgba(255, 255, 255, 0.25);
+    border-radius: 10px;
+    height: 60px;
+    padding: 0.25rem 0.6rem;
+    gap: 15px;
+  }
+  
+  .poster__container {
+    width: 20%;
+  }
+  
+  .poster {
+    width: 100%;
+    height: 100%;
+  }
+  .poster__details {
+    width: 60%;
+  }
+  .poster__details > h4 {
+    font-size: 13px;
+    font-weight: 500;
+  }
+  .poster__details > h6 {
+    font-size: 12px;
+    font-weight: 400;
+    color: rgb(63, 63, 246);
+  }
+  
+  .download__gif__container {
+    width: 20%;
+    height: 100%;
+  }
+  .gif {
+    width: 100%;
+    height: 100%;
+  }
+  
+  .feature__3__backgroud__video__container {
+    max-width: 63%;
+    max-height: 47%;
+    z-index: -2;
+    top: 9%;
+    left: 19%;
+  }
+  
+  .FAQ__accordian {
+    width: 100%;
+  }
+  .FAQ__title {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    padding: 15px 20px;
+    font-size: 18px;
+    background-color: #303030;
+    border: 1px solid #303030;
+    color: white;
+  }
+  
+  .FAQ__visible {
+    background-color: #303030;
+    border-top: 1px solid black;
+    max-height: 0;
+    overflow: hidden;
+    transition: max-height 0.5s ease-in-out;
+  }
+  
+  .FAQ__visible > p {
+    margin: 1rem;
+  }
+  .FAQ__list__container {
+    border-top: 8px solid #222;
+    padding: 2rem 0;
+  }
+  .FAQ__heading {
+    font-size: 20px;
+    text-align: center;
+    font-weight: 600;
+    margin: 1rem 3rem;
+  }
+  
+  .FAQ__list {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+  }
+  
+  .FAQ__get__started__email {
+    text-align: center;
+  }
+  
+  .FAQ__get__started__email > h3 {
+    font-size: 18px;
+    font-weight: 400;
+    margin: 2rem 0;
+  }
+  @media (min-width: 1024px) {
+    footer {
+        padding: 2rem 25rem;
+        justify-content: flex-start;
+        text-align: left;
+        align-items: flex-start;
+      }
+    
+      .footer__row__2 {
+        justify-content: space-between;
+        align-items: flex-start;
+        flex-wrap: nowrap;
+      }
+    
+      .footer__row__1,
+      .footer__row__3,
+      .footer__row__4 {
+        align-self: flex-start;
+      }
+  .feature {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 20px;
+  }
+
+  .feature__details {
+    text-align: left;
+    padding: 0 6rem;
+  }
+
+  .feature__title {
+    font-size: 50px;
+  }
+
+  .feature__sub__title {
+    font-size: 25px;
+  }
+
+  .feature__image__container {
+    max-width: 500px;
+  }
+
+  .feature:nth-child(even) {
+    flex-direction: row-reverse;
+  }
+
+  .feature__2__poster__container {
+    max-width: 20em;
+    height: 100px;
+    padding: 1rem;
+  }
+  .poster__container {
+    width: 20%;
+  }
+  .FAQ__list {
+    padding: 1rem 25rem;
+  }
+  .FAQ__get__started__email {
+    transform: translateX(16%);
+  }}
+  .email__label:nth-child(even)
+  {
+      left:23%;
+  }
+  footer {
+    border-top: 8px solid #333;
+    padding: 2rem 1rem;
+    color: #757575;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    padding-left: 200px;
+  }
+  
+  .footer__row__2 {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    gap: 20px;
+  }
+  
+  .footer__row__1 > h4 {
+    font-size: 15px;
+    font-weight: 500;
+  }
+  .nav__item:nth-child(even)
+  {
+      color:#757575 ;
+  }
+  .ayipoyindi
+  {
+     color:  #757575;
+  }
+  
