--- a/style.css
+++ b/style.css
@@ -1,324 +1,461 @@
-.navbar
-{
-    display: flex;
-    justify-content: space-between;
-    padding: 2% 5%;
-    top: 0;
-    position: absolute;
-    width: 90%;
-    z-index: 10;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
-body
-{
-    background-color: black;
-    color: white;
-    font-family: 'Poppins', sans-serif;
+
+body {
+  background-color: black;
+  color: white;
+  font-family: "Poppins", sans-serif;
 }
-.language__drop__down
-{
-    background-color: black;
-    color: white;
-    border: none;
-    background-color: rgba(0,0,0,0.4);
-    
+
+.navbar {
+  position: absolute;
+  top: 0;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  padding: 3% 5%;
+  z-index: 10;
 }
-.dropdown__container
-{
-    border:1px solid white;
-    padding: 0.4rem;
-    border-radius: 4px;
+
+.navbar__brand {
+  width: 100px;
+  height: 100%;
 }
-.language__drop__down:focus
-{
-    
-    outline:none;
+
+.brand__logo {
+  width: 100%;
+  height: 100%;
 }
-.navbar__nav__items
-{
-    display: flex; 
-    gap: 20px;
+
+.language__drop__down {
+  background: transparent;
+  border: none;
+  color: white;
 }
-.signin
-{
-    background-color: red;
-    color: white;
-    border:1px solid black;
-    padding: 0.25rem 0.5rem;
-    border-radius: 4px;
-    height: 35px;
-    width: 75px;
-    font-size: 16px;
+
+.language__drop__down:focus {
+  outline: none;
 }
-.hero__bg__image__container
-{
-    width: 100%;
-    height: 98vh;
+
+.dropdown__container {
+  border: 1px solid white;
+  padding: 0.4rem;
+  border-radius: 4px;
+  background: rgba(0, 0, 0, 0.4);
 }
-.hero__bg
-{
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
+
+.signin__button {
+  background-color: #dc030f;
+  border: 1px solid #dc030f;
+  color: white;
+  padding: 0.25rem 0.5rem;
+  border-radius: 4px;
 }
-.hero__bg__overlay
-{
-    position: absolute;
-    inset: 0;
-    height: 100vh;
-    width: 100%;
-    background-color: rgba(0,0,0,0.4);
+
+.navbar__nav__items {
+  display: flex;
+  gap: 10px;
 }
-.hero__card
-{
-    text-align: center;
-    display:grid;
-    grid-template-rows: 180px 50px 0px;
-    flex-direction: column;
-    position: absolute;
-    top: 30%;
-    left: 30%;
-    transform: translate(-20%,-20%);
+
+.hero__bg__image__container {
+  width: 100%;
+  height: 80vh;
 }
-.hero__title
-{
-   font-weight: 600;
-   font-size: 50px;
+
+.hero__bg__image {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
-.hero__subtitle
-{
-    font-weight: 400;
-    font-size: 1.2rem;
+
+.hero__bg__overlay {
+  position: absolute;
+  inset: 0;
+  width: 100%;
+  height: 80vh;
+  background: rgba(0, 0, 0, 0.4);
+  background-image: linear-gradient(
+    to top,
+    rgba(0, 0, 0, 0.8) 0,
+    rgba(0, 0, 0, 0) 60%,
+    rgba(0, 0, 0, 0.8) 100%
+  );
 }
-.hero__description
-{
-    font-weight: 400;
-    font-size: 1.3rem;
+
+.hero__card {
+  position: absolute;
+  top: 20%;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
 }
-.email__input
-{
-    border:none;
-    background:transparent;
-    width: 100%;
-    height: 100%;
-    padding-left: 13px;
+
+.hero__title {
+  font-weight: 600;
+  font-size: 2rem;
 }
-.email__label
-{   
-    position: absolute;
-   color: rgb(153, 149, 149);
-   top: 25%;
-   left: 50px;
-   transition:0.5s;
+
+.hero__subtitle,
+.hero__description {
+  font-weight: 400;
+  font-size: 1rem;
 }
-.email__form__container
-{   
-    position: relative;
-    display: flex;
-    flex-direction:row;
-    justify-content: center;
-    align-items: center;
-    top: 115%;
+
+.hero__description {
+  margin: 0 50px;
 }
-.form__container
-{
-    height: 50px;
-    width: 400px;
-    background-color: white;
+
+.email__input {
+  border: none;
+  background: transparent;
+  width: 100%;
+  height: 100%;
+  padding-left: 7px;
 }
-.email__input:focus + .email__label
-{
-    top:0px;
-    left: 1.5%;
-    font-size: 13px;
+.email__label {
+  color: black;
+  position: absolute;
+  top: 28%;
+  left: 2%;
+  color: rgb(153, 149, 149);
+  transition: 0.5s;
 }
-.email__input:not(:placeholder-shown).email__input:not(:focus) +.email__label
-{
-    top:0;
-    font-size: 13px;
+
+.email__form__container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 15px;
 }
-.email__input:focus-visible
-{
-    outline: none;
+
+.form__container {
+  background-color: white;
+  width: 90%;
+  height: 50px;
+  position: relative;
 }
-.email__button
-{
-    height: 52px;
-    width: 250px;
-    color: white;
-    font-size: 25px;
-    background-color: red;
-    border: 1px solid transparent;
+
+.email__input:focus + .email__label {
+  top: 0.2rem;
+  font-size: 10px;
 }
+
+.email__input:not(:placeholder-shown).email__input:not(:focus) + .email__label {
+  top: 0.2rem;
+  font-size: 10px;
+}
+
+.email__input:focus-visible {
+  outline: none;
+}
+
+.primary__button {
+  background-color: #dc030f;
+  border: 1px solid #dc030f;
+  color: white;
+  padding: 0.8rem 1.2rem;
+  border-radius: 2px;
+  font-size: 15px;
+  letter-spacing: 1px;
+}
+
 .feature {
-    border-top: 8px solid #222;
-    padding: 2rem 1rem;
+  border-top: 8px solid #222;
+  padding: 2rem 1rem;
+}
+
+.feature__details {
+  text-align: center;
+}
+
+.feature__title {
+  font-size: 25px;
+  font-weight: 600;
+  margin: 10px 0;
+}
+
+.feature__sub__title {
+  font-size: 15px;
+  font-weight: 400;
+}
+
+.feature__image__container {
+  width: 100%;
+  position: relative;
+}
+.feature__image {
+  width: 100%;
+}
+
+.feature__backgroud__video__container {
+  position: absolute;
+  width: 100%;
+  top: 20%;
+  left: 13%;
+  height: 100%;
+  max-width: 73%;
+  max-height: 54%;
+  z-index: -2;
+}
+
+.feature__backgroud__video {
+  width: 100%;
+}
+
+.feature__2__poster__container {
+  position: absolute;
+  bottom: 8%;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 100%;
+  max-width: 16em;
+  display: flex;
+  align-items: center;
+  background-color: black;
+  border: 2px solid rgba(255, 255, 255, 0.25);
+  border-radius: 10px;
+  height: 60px;
+  padding: 0.25rem 0.6rem;
+  gap: 15px;
+}
+
+.poster__container {
+  width: 20%;
+}
+
+.poster {
+  width: 100%;
+  height: 100%;
+}
+.poster__details {
+  width: 60%;
+}
+.poster__details > h4 {
+  font-size: 13px;
+  font-weight: 500;
+}
+.poster__details > h6 {
+  font-size: 12px;
+  font-weight: 400;
+  color: rgb(63, 63, 246);
+}
+
+.download__gif__container {
+  width: 20%;
+  height: 100%;
+}
+.gif {
+  width: 100%;
+  height: 100%;
+}
+
+.feature__3__backgroud__video__container {
+  max-width: 63%;
+  max-height: 47%;
+  z-index: -2;
+  top: 9%;
+  left: 19%;
+}
+
+.FAQ__accordian {
+  width: 100%;
+}
+.FAQ__title {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  padding: 15px 20px;
+  font-size: 18px;
+  background-color: #303030;
+  border: 1px solid #303030;
+  color: white;
+}
+
+.FAQ__visible {
+  background-color: #303030;
+  border-top: 1px solid black;
+  max-height: 0;
+  overflow: hidden;
+  transition: max-height 0.5s ease-in-out;
+}
+
+.FAQ__visible > p {
+  margin: 1rem;
+}
+.FAQ__list__container {
+  border-top: 8px solid #222;
+  padding: 2rem 0;
+}
+.FAQ__heading {
+  font-size: 20px;
+  text-align: center;
+  font-weight: 600;
+  margin: 1rem 3rem;
+}
+
+.FAQ__list {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+}
+
+.FAQ__get__started__email {
+  text-align: center;
+}
+
+.FAQ__get__started__email > h3 {
+  font-size: 18px;
+  font-weight: 400;
+  margin: 2rem 0;
+}
+
+footer {
+  border-top: 8px solid #333;
+  padding: 2rem 1rem;
+  color: #757575;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.footer__row__2 {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  gap: 20px;
+}
+
+.footer__row__1 > h4 {
+  font-size: 15px;
+  font-weight: 500;
+}
+
+.footer__row__3 > .dropdown__container {
+  width: fit-content;
+  border: 1px solid #757575;
+  color: #757575;
+}
+
+.footer__row__3 > .dropdown__container > .language__drop__down {
+  color: #757575;
+}
+
+@media (min-width: 768px) {
+  .hero__bg__image__container {
+    height: 100vh;
   }
-  
-  .feature__details {
-    text-align: center;
+
+  .hero__bg__overlay {
+    height: 100vh;
   }
-  
+  .hero__card {
+    top: 40%;
+    left: 30%;
+    transform: translate(-20%, -20%);
+  }
+  .hero__title {
+    font-size: 3rem;
+  }
+  .hero__subtitle,
+  .hero__description {
+    font-size: 1.3rem;
+  }
+
+  .feature {
+    padding: 4rem;
+  }
+
   .feature__title {
-    font-size: 25px;
-    font-weight: 600;
-    margin: 10px 0;
+    font-size: 35px;
   }
-  
+
   .feature__sub__title {
-    font-size: 15px;
-    font-weight: 400;
+    font-size: 20px;
   }
-  
-  .feature__image__container {
-    width: 100%;
-    position: relative;
-  }
-  .feature__image {
-    width: 100%;
-  }
-  
-  .feature__backgroud__video__container {
-    position: absolute;
-    width: 100%;
-    top: 20%;
-    left: 13%;
-    height: 100%;
-    max-width: 73%;
-    max-height: 54%;
-    z-index: -2;
-  }
-  
-  .feature__backgroud__video {
-    width: 100%;
-  }
-  
   .feature__2__poster__container {
-    position: absolute;
-    bottom: 8%;
-    left: 50%;
-    transform: translateX(-50%);
-    width: 100%;
-    max-width: 16em;
-    display: flex;
-    align-items: center;
-    background-color: black;
-    border: 2px solid rgba(255, 255, 255, 0.25);
-    border-radius: 10px;
-    height: 60px;
-    padding: 0.25rem 0.6rem;
-    gap: 15px;
+    max-width: 26em;
+    height: 85px;
   }
-  
   .poster__container {
-    width: 20%;
+    width: 15%;
   }
-  
-  .poster {
-    width: 100%;
-    height: 100%;
+  .download__gif__container {
+    width: 3rem;
+    height: 3rem;
   }
-  .poster__details {
-    width: 60%;
-  }
+
   .poster__details > h4 {
-    font-size: 13px;
-    font-weight: 500;
+    font-size: 18px;
   }
   .poster__details > h6 {
-    font-size: 12px;
-    font-weight: 400;
-    color: rgb(63, 63, 246);
-  }
-  
-  .download__gif__container {
-    width: 20%;
-    height: 100%;
-  }
-  .gif {
-    width: 100%;
-    height: 100%;
-  }
-  
-  .feature__3__backgroud__video__container {
-    max-width: 63%;
-    max-height: 47%;
-    z-index: -2;
-    top: 9%;
-    left: 19%;
-  }
-  
-  .FAQ__accordian {
-    width: 100%;
+    font-size: 14px;
   }
   .FAQ__title {
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-    padding: 15px 20px;
-    font-size: 18px;
-    background-color: #303030;
-    border: 1px solid #303030;
-    color: white;
-  }
-  
-  .FAQ__visible {
-    background-color: #303030;
-    border-top: 1px solid black;
-    max-height: 0;
-    overflow: hidden;
-    transition: max-height 0.5s ease-in-out;
-  }
-  
-  .FAQ__visible > p {
-    margin: 1rem;
-  }
-  .FAQ__list__container {
-    border-top: 8px solid #222;
-    padding: 2rem 0;
+    font-size: 20px;
   }
   .FAQ__heading {
-    font-size: 20px;
-    text-align: center;
-    font-weight: 600;
-    margin: 1rem 3rem;
+    font-size: 38px;
+    font-weight: 500;
+    letter-spacing: 1px;
   }
-  
   .FAQ__list {
+    padding: 1rem 5rem;
+  }
+  .FAQ__get__started__email {
+    width: 75%;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
-    gap: 10px;
+    transform: translateX(15%);
   }
-  
-  .FAQ__get__started__email {
-    text-align: center;
+}
+
+@media (min-width: 1024px) {
+  .navbar {
+    padding: 2% 5%;
   }
-  
-  .FAQ__get__started__email > h3 {
+
+  .navbar__brand {
+    width: 150px;
+  }
+
+  .signin__button {
+    padding: 10px 20px;
     font-size: 18px;
-    font-weight: 400;
-    margin: 2rem 0;
   }
-  @media (min-width: 1024px) {
-    footer {
-        padding: 2rem 25rem;
-        justify-content: flex-start;
-        text-align: left;
-        align-items: flex-start;
-      }
-    
-      .footer__row__2 {
-        justify-content: space-between;
-        align-items: flex-start;
-        flex-wrap: nowrap;
-      }
-    
-      .footer__row__1,
-      .footer__row__3,
-      .footer__row__4 {
-        align-self: flex-start;
-      }
+  .dropdown__container {
+    padding: 10px 5px;
+  }
+
+  .navbar__nav__items {
+    gap: 30px;
+  }
+
+  .hero__card {
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+
+  .form__container {
+    width: 50%;
+  }
+  .email__form__container {
+    flex-direction: row;
+    align-items: center;
+    gap: 1px;
+  }
+  .primary__button {
+    height: 50px;
+  }
+
   .feature {
     display: flex;
     align-items: center;
@@ -360,44 +497,26 @@ body
   }
   .FAQ__get__started__email {
     transform: translateX(16%);
-  }}
-  .email__label:nth-child(even)
-  {
-      left:26.5%;
   }
-  .email__input:focus + .email__label:nth-child(even)
-{
-    top:0;
-    left: 26.5%;
-    font-size: 13px;
-}
   footer {
-    border-top: 8px solid #333;
-    padding: 2rem 1rem;
-    color: #757575;
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-    padding-left: 200px;
+    padding: 2rem 25rem;
+    justify-content: flex-start;
+    text-align: left;
+    align-items: flex-start;
   }
-  
+
   .footer__row__2 {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    gap: 20px;
+    justify-content: space-between;
+    align-items: flex-start;
+    flex-wrap: nowrap;
   }
-  
-  .footer__row__1 > h4 {
-    font-size: 15px;
-    font-weight: 500;
+
+  .footer__row__1,
+  .footer__row__3,
+  .footer__row__4 {
+    align-self: flex-start;
   }
-  .nav__item:nth-child(even)
-  {
-      color:#757575 ;
-  }
-  .ayipoyindi
-  {
-     color:  #757575;
-  }
-  
+}
+
+@media (min-width: 1254px) {
+}
